--- a/Runtime/Resources/RadialMenuBaseStyle.uss
+++ b/Runtime/Resources/RadialMenuBaseStyle.uss
@@ -1,4 +1,10 @@
-#radial-menu__wheel {
+#radial-menu-parent {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+#radial-menu-element {
     position: absolute;
     justify-content: center;
     align-items: center;
